--- a/application/docker-compose-new.yml
+++ b/application/docker-compose-new.yml
@@ -1,1 +1,151 @@
+version: '3.7'
+services:
+  opensearch-node1:
+    image: opensearchproject/opensearch:2.11.1
+    container_name: opensearch-node1
+    environment:
+      OPENSEARCH_JAVA_OPTS: "-Xms512m -Xmx512m"
+      node.name: opensearch-node1
+      discovery.seed_hosts: opensearch-node1,opensearch-node2
+      cluster.initial_master_nodes: opensearch-node1,opensearch-node2
+      plugins.security.ssl.transport.pemkey_filepath: certificates/opensearch-node1/opensearch-node1.key # relative path
+      plugins.security.ssl.transport.pemcert_filepath: certificates/opensearch-node1/opensearch-node1.pem
+      plugins.security.ssl.http.pemkey_filepath: certificates/opensearch-node1/opensearch-node1.key
+      plugins.security.ssl.http.pemcert_filepath: certificates/opensearch-node1/opensearch-node1.pem
+      DISABLE_INSTALL_DEMO_CONFIG: "true"
+      JAVA_HOME: /usr/share/opensearch/jdk
+      bootstrap.memory_lock: "true" # along with the memlock settings below, disables swapping
+      network.host: "0.0.0.0"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    volumes:
+      - opensearch-data1:/usr/share/opensearch/data
+      - "./opensearch.yml:/usr/share/opensearch/config/opensearch.yml"
+      - "./certs:/usr/share/opensearch/config/certificates:ro"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "1"
+    ports:
+      - 9200:9200
+      - 9600:9600
+    networks:
+      - opensearch-net
 
+  opensearch-node2:
+    image: opensearchproject/opensearch:2.11.1
+    container_name: opensearch-node2
+    environment:
+      OPENSEARCH_JAVA_OPTS: "-Xms512m -Xmx512m"
+      node.name: opensearch-node2
+      discovery.seed_hosts: opensearch-node1,opensearch-node2
+      cluster.initial_master_nodes: opensearch-node1,opensearch-node2
+      plugins.security.ssl.transport.pemkey_filepath: certificates/opensearch-node2/opensearch-node2.key # relative path
+      plugins.security.ssl.transport.pemcert_filepath: certificates/opensearch-node2/opensearch-node2.pem
+      plugins.security.ssl.http.pemkey_filepath: certificates/opensearch-node2/opensearch-node2.key
+      plugins.security.ssl.http.pemcert_filepath: certificates/opensearch-node2/opensearch-node2.pem
+      DISABLE_INSTALL_DEMO_CONFIG: "true"
+      JAVA_HOME: /usr/share/opensearch/jdk
+      bootstrap.memory_lock: "true" # along with the memlock settings below, disables swapping
+      network.host: "0.0.0.0"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "1"
+    volumes:
+      - opensearch-data2:/usr/share/opensearch/data
+      - "./opensearch.yml:/usr/share/opensearch/config/opensearch.yml"
+      - "./certs:/usr/share/opensearch/config/certificates:ro"
+    networks:
+      - opensearch-net
+
+  opensearch-dashboards:
+    image: opensearchproject/opensearch-dashboards:2.11.1
+    container_name: opensearch-dashboards
+    ports:
+      - 5601:5601
+    expose:
+      - "5601"
+    environment:
+      OPENSEARCH_HOSTS: '["https://opensearch-node1:9200","https://opensearch-node2:9200"]'
+      DISABLE_INSTALL_DEMO_CONFIG: "true"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "100m"
+        max-file: "1"
+    networks:
+      - opensearch-net
+    volumes:
+      - "./certs:/usr/share/opensearch-dashboards/config/certificates:ro"
+      - "./opensearch-dashboards.yml:/usr/share/opensearch-dashboards/config/opensearch_dashboards.yml"
+  mysql-db:
+    container_name: nlq-mysql
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: llm
+      MYSQL_USER: llmdata
+      MYSQL_PASSWORD: llmdata
+    volumes:
+      - mysql-data:/var/lib/mysql
+      - ./initial_data:/opt/data
+    networks:
+      - opensearch-net
+
+  streamlit-demo:
+    container_name: nlq-webserver
+    build: .
+    env_file:
+      - .env
+    ports:
+      - "80:8501"
+      - "8765:8765"
+    expose:
+      - "8501"
+    volumes:
+      - ./config_files:/app/config_files
+      - ./deployment:/app/deployment
+    networks:
+      - opensearch-net
+
+  api:
+    container_name: nlq-api
+    build:
+      context: .
+      dockerfile: Dockerfile-api
+    env_file:
+      - .env
+    ports:
+      - "8000:8000"
+    expose:
+      - "8000"
+    volumes:
+      - ./config_files:/app/config_files
+    networks:
+      - opensearch-net
+
+volumes:
+  opensearch-data1:
+  opensearch-data2:
+  mysql-data:
+
+networks:
+  opensearch-net:
