--- a/application/opensearch.yml
+++ b/application/opensearch.yml
@@ -17,11 +17,11 @@ plugins.security.ssl.transport.enforce_hostname_verification: false
 plugins.security.authcz.admin_dn:
   - 'CN=ADMIN,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
 plugins.security.nodes_dn:
-  - 'CN=os00,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
-  - 'CN=os01,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
-  - 'CN=os02,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
-  - 'CN=os03,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
-  - 'CN=os04,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
-  - 'CN=os05,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
-  - 'CN=os06,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
-  - 'CN=os07,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node1,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node2,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node3,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node4,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node5,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node6,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
+  - 'CN=opensearch-node17,O=EXAMPLE,L=PARIS,ST=IDF,C=FR'
